# radrun

./: README.md
api/: .env  Cargo.toml  README.md
api/migrations/: 20250919222103_init.sql
api/src/: account_store.rs  auth.rs  main.rs
api/src/account/: account_routes.rs  account_store.rs  mod.rs
api/src/auth/: auth_repo.rs  auth_routes.rs  mod.rs  session_store.rs
api/src/user/: mod.rs  user_routes.rs  user_store.rs
web/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: manifest.json
web/scripts/: generate_api.sh
web/src/: App.tsx  main.tsx  routeTree.gen.ts
web/src/api/: client.ts
web/src/auth/: AuthContext.tsx  LoginPage.tsx  SignUpPage.tsx
web/src/components/: Header.tsx
web/src/routes/: __root.tsx  about.tsx  index.tsx  login.tsx  profile.tsx  sign-up.tsx
web/src/user/: ProfilePage.tsx
