[package]
name = "radrun-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "json"] }
serde = "1.0.226"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "derive",
  "macros",
  "time",
] }
tokio = { version = "1.47.1", features = ["full"] }
