[package]
name = "radrun-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros", "json"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.226"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "derive", "macros", "chrono", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
ts-rs = { version = "11.0.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
